<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
	<string name="app_name">Cheesesquare</string>

	<string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
	<string name="checkin">Checkin</string>

	<string name="menu_night_mode">Night mode</string>
	<string name="menu_night_mode_system">Follow system</string>
	<string name="menu_night_mode_day">Day (always)</string>
	<string name="menu_night_mode_night">Night (always)</string>
	<string name="menu_night_mode_auto">Auto</string>
	<string name="modelo_veiculo">Modelo do Veículo</string>
	<string name="marca_veiculo">Marca do Veículo</string>
	<string name="especie_veiculo">Espécie do Veículo</string>
	<string name="ano_fabricacao">Ano de Fabricação</string>
	<string name="ano_modelo">Ano do Modelo</string>
	<string name="combustivel">Combustível</string>
	<string name="odometro">Km Rodados</string>
	<string name="quantidade_portas">Quant. Portas</string>
	<string name="cor_veiculo">Cor</string>
	<string name="placa_veiculo">Placa</string>
	<string name="observacoes">Observações</string>
	<string name="valor_venda">Valor de Venda</string>
	<string name="valor_promocao">Valor Promocional</string>
	<string name="uf_veiculo">UF Placa</string>
	<string name="municipio_emplacamento">Munic. Placa</string>
	<string name="municipio_localizacao">Município de Localização</string>
	<string name="proximo">Próximo</string>

</resources>
